# wp2git

./: .gitignore  CMakeLists.txt  COPYING  README  blacklist.example  git-version-gen.sh  wp2git.cpp
expat/: expat_config.h  xmlparse.c  xmltok.c
html/: index.html
